# mantoq

./: LICENSE  README.md  pyproject.toml
mantoq/: __init__.py  num2words.py  tashkeel.py
mantoq/lib/buck/: symbols.py
mantoq/lib/pylibtashkeel/: __init__.py  constants.py  text_cleaners.py  text_encoder.py
tests/: test_basic.py
